added embedded fonts

--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -9,16 +9,16 @@
     <!-- NOTE: tab-indexes 61-80 are reserved for bottom navigation -->
     <ul id="bottom-nav">
         <li class="no-bullet">
-            <a tabindex="61" href="/content/news-and-events.html">News &amp; Events</a>
+            <a tabindex="61" href="#content/news-and-events.html">News &amp; Events</a>
         </li>
         <li>
-            <a tabindex="62" href="/content/contact-us.html">Contact Us</a>
+            <a tabindex="62" href="#content/contact-us.html">Contact Us</a>
         </li>
         <li>
-            <a tabindex="63" href="/content/job-opportunities.html">Job Opportunities</a>
+            <a tabindex="63" href="#content/job-opportunities.html">Job Opportunities</a>
         </li>
         <li>
-            <a tabindex="64" href="/content/copyright-notice.html">Copyright Notice</a>
+            <a tabindex="64" href="#content/copyright-notice.html">Copyright Notice</a>
         </li>
     </ul>
 </footer>
