--- a/app/views/header.html
+++ b/app/views/header.html
@@ -1,9 +1,8 @@
-
 <header id="header" class="container">
 
-<!--
-    <nav id="main-nav">
-        &lt;!&ndash; NOTE: tab-indexes 11-60 are reserved for main navigation &ndash;&gt;
+    <!--
+        <nav id="main-nav">
+            &lt;!&ndash; NOTE: tab-indexes 11-60 are reserved for main navigation &ndash;&gt;
         <ul id="nav-list">
             <li>
                 <a tabindex="11" href="/index.html">About<span
@@ -69,13 +68,15 @@
 -->
 
     <!-- NOTE: tab-indexes 1-10 are reserved for first-level hooks -->
-    <!--<span class="consult">Call for Consulting: +972-54-260-7104</span>-->
-    <!--<a tabindex="1" title="to navigation" href="#main-nav" class="jump-to-nav hidden">Jump To Navigation</a>-->
-    <!--<a tabindex="6" title="Home" href="/index.html" id="logo" class="round-14"></a>-->
+    <a tabindex="1" title="to navigation" href="#main-nav" class="jump-to-nav hidden">Jump To Navigation</a>
+
+
+    <div id="top-links" class="row">
+    </div>
 
     <div id="header-nav" class="row">
         <div>
-            <a class="logo horizontal"><span>123</span>Completed</a>
+            <a tabindex="6" href="/index.html" class="logo horizontal"><span>123</span>Completed</a>
         </div>
         <div class="pull-right">
             <nav>
