--- a/app/views/header.html
+++ b/app/views/header.html
@@ -1,4 +1,4 @@
-<header id="header" class="container">
+<header id="header">
 
     <!--
         <nav id="main-nav">
@@ -9,59 +9,59 @@
                         class="sf-sub-indicator"> »</span></a>
                 <ul>
                     <li>
-                        <a tabindex="12" href="/content/company-profile.html">Company Profile</a>
+                        <a tabindex="12" href="/partials/company-profile.html">Company Profile</a>
                     </li>
                     <li>
-                        <a tabindex="13" href="/content/management.html">Management</a>
+                        <a tabindex="13" href="/partials/management.html">Management</a>
                     </li>
                     <li>
-                        <a tabindex="14" href="/content/methodology.html">Methodology</a>
+                        <a tabindex="14" href="/partials/methodology.html">Methodology</a>
                     </li>
                     <li>
-                        <a tabindex="15" href="/content/technology-domain.html">Technology Domain</a>
+                        <a tabindex="15" href="/partials/technology-domain.html">Technology Domain</a>
                     </li>
                 </ul>
             </li>
             <li>
-                <a tabindex="21" href="/content/services.html">Services<span
+                <a tabindex="21" href="/partials/services.html">Services<span
                         class="sf-sub-indicator"> »</span></a>
                 <ul>
                     <li>
-                        <a tabindex="22" href="/content/project-development.html">Project Development</a>
+                        <a tabindex="22" href="/partials/project-development.html">Project Development</a>
                     </li>
                     <li>
-                        <a tabindex="23" href="/content/it-troubleshooting-and-consulting.html">IT Troubleshooting and
+                        <a tabindex="23" href="/partials/it-troubleshooting-and-consulting.html">IT Troubleshooting and
                             Consulting</a>
                     </li>
                     <li>
-                        <a tabindex="24" href="/content/training.html">Training</a>
+                        <a tabindex="24" href="/partials/training.html">Training</a>
                     </li>
                     <li>
-                        <a tabindex="25" href="/content/rnd-staff-augmentation.html">R&amp;D Staff Augmentation</a>
+                        <a tabindex="25" href="/partials/rnd-staff-augmentation.html">R&amp;D Staff Augmentation</a>
                     </li>
                     <li>
-                        <a tabindex="26" href="/content/professional-services-execution-arm.html">Professional Services
+                        <a tabindex="26" href="/partials/professional-services-execution-arm.html">Professional Services
                             Execution Arm</a>
                     </li>
                 </ul>
             </li>
             <li>
-                <a tabindex="31" href="/content/business-relations.html">Business Relations<span
+                <a tabindex="31" href="/partials/business-relations.html">Business Relations<span
                         class="sf-sub-indicator"> »</span></a>
                 <ul>
                     <li>
-                        <a tabindex="32" href="/content/customers.html">Customers</a>
+                        <a tabindex="32" href="/partials/customers.html">Customers</a>
                     </li>
                     <li>
-                        <a tabindex="33" href="/content/partners.html">Partnerships</a>
+                        <a tabindex="33" href="/partials/partners.html">Partnerships</a>
                     </li>
                     <li>
-                        <a tabindex="34" href="/content/success-stories.html">Success Stories</a>
+                        <a tabindex="34" href="/partials/success-stories.html">Success Stories</a>
                     </li>
                 </ul>
             </li>
             <li>
-                <a tabindex="41" href="/content/contact-us.html" class="top-level">Contact</a>
+                <a tabindex="41" href="/partials/contact-us.html" class="top-level">Contact</a>
             </li>
         </ul>
     </nav>
@@ -71,27 +71,30 @@
     <a tabindex="1" title="to navigation" href="#main-nav" class="jump-to-nav hidden">Jump To Navigation</a>
 
 
-    <div id="top-links" class="row">
+    <div id="top-links" class="row-fluid">
     </div>
 
-    <div id="header-nav" class="row">
-        <div>
-            <a tabindex="6" href="/index.html" class="logo horizontal"><span>123</span>Completed</a>
+    <div id="header-nav" class="row-fluid">
+        <div class="span4">
+            <a tabindex="6" href="/index.html" class="logo">
+                <div class="one">123</div>
+                <div class="completed">Completed</div>
+            </a>
         </div>
-        <div class="pull-right">
+        <div class="span8 pull-right">
             <nav>
                 <ul>
                     <li>
-                        <a tabindex="11" href="/index.html">About</a>
+                        <a tabindex="11" href="#">About</a>
                     </li>
                     <li>
-                        <a tabindex="21" href="/content/services.html">Services</a>
+                        <a tabindex="21" href="#services.html">Services</a>
                     </li>
                     <li>
-                        <a tabindex="31" href="/content/business-relations.html">Business Relations</a>
+                        <a tabindex="31" href="#business-relations.html">Business Relations</a>
                     </li>
                     <li>
-                        <a tabindex="41" href="/content/contact-us.html">Contact</a>
+                        <a tabindex="41" href="#contact-us.html">Contact</a>
                     </li>
                 </ul>
             </nav>
