--- a/app/views/partials/technologies.html
+++ b/app/views/partials/technologies.html
@@ -1,71 +1,4 @@
-<div id="main" class="container">
-
-    <div class="row">
-        <div class="span8">
-            content
-        </div>
-        <div class="span4">
-            content
-        </div>
-    </div>
-
-    <div class="row">
-        <!-- who are we? -->
-        <div class="span4">
-            <h1>Who we are?</h1>
-
-            <p>
-                We are a leading System Integrator, R&amp;D, IT Consulting and Training
-                company, Our experts combine the skill set of Database Administers with
-                Java Architects expertise, and have managed enterprise level projects
-                as well as agile startups R&amp;D environments.
-            </p>
-
-            <p>
-                We are not afraid of any challenge and we have
-                <a href="#content/success-stories.html">the references</a>
-                to prove it.
-            </p>
-        </div>
-        <!-- what we do? -->
-        <!--<div class="span4">-->
-        <div class="span8">
-            <h1>What we do?</h1>
-            <ul class="no-bullets">
-                <!-- NOTE: tab-indexes 81-90 are reserved for services links -->
-                <li>
-                    <a tabindex="81" href="#project-development.html">
-                        <span class="icon development"></span>
-                        <span class="title">Project Development</span>
-                    </a>
-                </li>
-                <li>
-                    <a tabindex="82" href="#it-troubleshooting-and-consulting.html">
-                        <span class="icon consulting"></span>
-                        <span class="title">IT Troubleshooting And Consulting</span>
-                    </a>
-                </li>
-                <li>
-                    <a tabindex="83" href="#training.html">
-                        <span class="icon training"></span>
-                        <span class="title">Training</span>
-                    </a>
-                </li>
-                <li>
-                    <a tabindex="84" href="#rnd-staff-augmentation.html">
-                        <span class="icon staff"></span>
-                        <span class="title">R&amp;D Staff Augmentation</span>
-                    </a>
-                </li>
-                <li>
-                    <a tabindex="85" href="#professional-services-execution-arm.html">
-                        <span class="icon pro-services"></span>
-                        <span class="title">Professional Services Execution Arm</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <!-- technologies -->
+<!-- TODO to directive -->
 <!--
         <div class="span4">
 
@@ -151,5 +84,3 @@
             </div>
         </div>
 -->
-    </div>
-</div>
