--- a/app/styles/fonts.scss
+++ b/app/styles/fonts.scss
@@ -1,53 +1,8 @@
+@import "fonts/district-thin-pro/stylesheet.css";
+@import "fonts/open-sans/opensans_regular_macroman/stylesheet.css";
 @font-face {
-  font-family: 'district_prothin';
-  src: url('fonts/district-thin-pro/distproth-webfont.eot');
-  src: url('fonts/district-thin-pro/distproth-webfont.eot?#iefix') format('embedded-opentype'),
-  url('fonts/district-thin-pro/distproth-webfont.woff') format('woff'),
-  url('fonts/district-thin-pro/distproth-webfont.ttf') format('truetype'),
-  url('fonts/district-thin-pro/distproth-webfont.svg#district_prothin') format('svg');
+  font-family: 'lane';
+  src: url('fonts/lane/LANENAR_.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-}
-@font-face {
-  font-family: 'verdanaregular';
-  src: url('fonts/verdana/verdana-webfont.eot');
-  src: url('fonts/verdana/verdana-webfont.eot?#iefix') format('embedded-opentype'),
-  url('fonts/verdana/verdana-webfont.woff') format('woff'),
-  url('fonts/verdana/verdana-webfont.ttf') format('truetype'),
-  url('fonts/verdana/verdana-webfont.svg#verdanaregular') format('svg');
-  font-weight: normal;
-  font-style: normal;
-
-}
-@font-face {
-  font-family: 'colaborate-bold';
-  src: url('fonts/colaborate/colabbol-webfont.eot');
-  src: url('fonts/colaborate/colabbol-webfont.eot?#iefix') format('embedded-opentype'),
-  url('fonts/colaborate/colabbol-webfont.woff') format('woff'),
-  url('fonts/colaborate/colabbol-webfont.ttf') format('truetype'),
-  url('fonts/colaborate/colabbol-webfont.svg#colaborate-boldregular') format('svg');
-  font-weight: normal;
-  font-style: normal;
-
-}
-@font-face {
-  font-family: 'colaborate-regular';
-  src: url('fonts/colaborate/colabreg-webfont.eot');
-  src: url('fonts/colaborate/colabreg-webfont.eot?#iefix') format('embedded-opentype'),
-  url('fonts/colaborate/colabreg-webfont.woff') format('woff'),
-  url('fonts/colaborate/colabreg-webfont.ttf') format('truetype'),
-  url('fonts/colaborate/colabreg-webfont.svg#colaborate-regularregular') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'colaborate-light';
-  src: url('fonts/colaborate/colablig-webfont.eot');
-  src: url('fonts/colaborate/colablig-webfont.eot?#iefix') format('embedded-opentype'),
-  url('fonts/colaborate/colablig-webfont.woff') format('woff'),
-  url('fonts/colaborate/colablig-webfont.ttf') format('truetype'),
-  url('fonts/colaborate/colablig-webfont.svg#colaboratelightregular') format('svg');
-  font-weight: normal;
-  font-style: normal;
-
 }
