--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -1,24 +1,39 @@
-<footer id="footer" style="opacity: 0.5;">
-    <!--
-     <a href="http://www.w3.org/html/logo/">
-        <img src="http://www.w3.org/html/logo/badge/html5-badge-h-solo.png" width="63" height="64" alt="HTML5 Powered" title="HTML5 Powered">
-    </a>
-    -->
-    <span class="copyright">© 1 2 3 Completed 2012</span>
+<footer id="footer">
+    <div class="container-fluid wrapper">
 
-    <!-- NOTE: tab-indexes 61-80 are reserved for bottom navigation -->
-    <ul id="bottom-nav">
-        <li class="no-bullet">
-            <a tabindex="61" href="#partials/news-and-events.html">News &amp; Events</a>
-        </li>
-        <li>
-            <a tabindex="62" href="#partials/contact-us.html">Contact Us</a>
-        </li>
-        <li>
-            <a tabindex="63" href="#partials/job-opportunities.html">Job Opportunities</a>
-        </li>
-        <li>
-            <a tabindex="64" href="#partials/copyright-notice.html">Copyright Notice</a>
-        </li>
-    </ul>
+        <div class="row-fluid">
+
+            <!--
+             <a href="http://www.w3.org/html/logo/">
+                <img src="http://www.w3.org/html/logo/badge/html5-badge-h-solo.png" width="63" height="64" alt="HTML5 Powered" title="HTML5 Powered">
+            </a>
+            -->
+
+            <!-- TODO add 'built with angular', 'built by me (link to management)' -->
+
+            <!-- TODO duplicate this list at the top -->
+            <!-- NOTE: tab-indexes 61-80 are reserved for bottom navigation -->
+            <ul class="span3 links-list">
+                <li>
+                    <a tabindex="61" href="#news-and-events.html">News &amp; Events</a>
+                </li>
+                <li>
+                    <a tabindex="62" href="#contact-us.html">Contact Us</a>
+                </li>
+                <li>
+                    <a tabindex="63" href="#job-opportunities.html">Job Opportunities</a>
+                </li>
+                <li>
+                    <a tabindex="64" href="#copyright-notice.html">Copyright Notice</a>
+                </li>
+            </ul>
+
+            <span class="span3"></span>
+
+            <span class="span3"></span>
+
+            <span class="span3 text-right">© 1 2 3 Completed 2013</span>
+
+        </div>
+    </div>
 </footer>
