--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -1,4 +1,4 @@
-<div id="wrapper" class="container-fluid">
+<div class="wrapper container-fluid">
     <div ng-include="'views/header.html'" class="row-fluid"></div>
     <div ng-switch="data.url">
         <div ng-switch-when="/">
@@ -11,5 +11,5 @@
             </div>
         </div>
     </div>
-    <div ng-include="'views/footer.html'"></div>
 </div>
+<div ng-include="'views/footer.html'"></div>
