--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -1,7 +1,8 @@
-<footer id="footer">
-    <div class="container-fluid wrapper">
+<div class="container">
 
-        <div class="row-fluid">
+    <div class="row">
+
+        <div class="col-md-12">
 
             <!--
              <a href="http://www.w3.org/html/logo/">
@@ -13,7 +14,7 @@
 
             <!-- TODO duplicate this list at the top -->
             <!-- NOTE: tab-indexes 61-80 are reserved for bottom navigation -->
-            <ul class="span3 links-list">
+            <ul class="col-md-3 links-list">
                 <li>
                     <a tabindex="61" href="#news-and-events.html">News &amp; Events</a>
                 </li>
@@ -28,12 +29,12 @@
                 </li>
             </ul>
 
-            <span class="span3"></span>
+            <span class="col-md-3"></span>
 
-            <span class="span3"></span>
+            <span class="col-md-3"></span>
 
-            <span class="span3 text-right">© 1 2 3 Completed 2013</span>
+            <span class="col-md-3 text-right">© 1 2 3 Completed 2013</span>
 
         </div>
     </div>
-</footer>
+</div>
