--- a/app/views/header.html
+++ b/app/views/header.html
@@ -1,105 +1,46 @@
-<header id="header">
+<div class="container">
 
-    <!--
-        <nav id="main-nav">
-            &lt;!&ndash; NOTE: tab-indexes 11-60 are reserved for main navigation &ndash;&gt;
-        <ul id="nav-list">
-            <li>
-                <a tabindex="11" href="/index.html">About<span
-                        class="sf-sub-indicator"> »</span></a>
-                <ul>
-                    <li>
-                        <a tabindex="12" href="/partials/company-profile.html">Company Profile</a>
-                    </li>
-                    <li>
-                        <a tabindex="13" href="/partials/management.html">Management</a>
-                    </li>
-                    <li>
-                        <a tabindex="14" href="/partials/methodology.html">Methodology</a>
-                    </li>
-                    <li>
-                        <a tabindex="15" href="/partials/technology-domain.html">Technology Domain</a>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <a tabindex="21" href="/partials/services.html">Services<span
-                        class="sf-sub-indicator"> »</span></a>
-                <ul>
-                    <li>
-                        <a tabindex="22" href="/partials/project-development.html">Project Development</a>
-                    </li>
-                    <li>
-                        <a tabindex="23" href="/partials/it-troubleshooting-and-consulting.html">IT Troubleshooting and
-                            Consulting</a>
-                    </li>
-                    <li>
-                        <a tabindex="24" href="/partials/training.html">Training</a>
-                    </li>
-                    <li>
-                        <a tabindex="25" href="/partials/rnd-staff-augmentation.html">R&amp;D Staff Augmentation</a>
-                    </li>
-                    <li>
-                        <a tabindex="26" href="/partials/professional-services-execution-arm.html">Professional Services
-                            Execution Arm</a>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <a tabindex="31" href="/partials/business-relations.html">Business Relations<span
-                        class="sf-sub-indicator"> »</span></a>
-                <ul>
-                    <li>
-                        <a tabindex="32" href="/partials/customers.html">Customers</a>
-                    </li>
-                    <li>
-                        <a tabindex="33" href="/partials/partners.html">Partnerships</a>
-                    </li>
-                    <li>
-                        <a tabindex="34" href="/partials/success-stories.html">Success Stories</a>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <a tabindex="41" href="/partials/contact-us.html" class="top-level">Contact</a>
-            </li>
-        </ul>
-    </nav>
--->
 
     <!-- NOTE: tab-indexes 1-10 are reserved for first-level hooks -->
     <a tabindex="1" title="to navigation" href="#main-nav" class="jump-to-nav hidden">Jump To Navigation</a>
 
 
-    <div id="top-links" class="row-fluid">
+    <div id="top-links" class="row">
+        <nav class="col-md-12">
+            <ul class="list-inline pull-right">
+                <li>
+                    <a tabindex="41" href="job-opportunities.html">Job Opportunities</a>
+                </li>
+            </ul>
+        </nav>
     </div>
 
-    <div id="header-nav" class="row-fluid">
-        <div class="span4">
-            <a tabindex="6" href="/index.html" class="logo">
-                <div class="one">123</div>
-                <div class="completed">Completed</div>
+    <div id="header-nav" class="row">
+        <div class="col-md-4">
+            <a tabindex="6" href="/" class="logo">
+                <span class="one">123</span>
+                <span class="completed">completed</span>
             </a>
         </div>
-        <div class="span8 pull-right">
+        <div class="col-md-8">
+            <!-- NOTE: tab-indexes 11-50 are reserved for main navigation -->
             <nav>
-                <ul>
+                <ul class="list-inline pull-right">
                     <li>
-                        <a tabindex="11" href="#">About</a>
+                        <a tabindex="11" href="services.html">Global Services</a>
                     </li>
                     <li>
-                        <a tabindex="21" href="#services.html">Services</a>
+                        <a tabindex="21" href="training.html">Training</a>
                     </li>
                     <li>
-                        <a tabindex="31" href="#business-relations.html">Business Relations</a>
+                        <a tabindex="31" href="business-relations.html">Business Relations</a>
                     </li>
                     <li>
-                        <a tabindex="41" href="#contact-us.html">Contact</a>
+                        <a tabindex="41" href="contact-us.html">Contact</a>
                     </li>
                 </ul>
             </nav>
         </div>
 
     </div>
-
-</header>
+</div>
