--- a/app/views/partials/technologies.html
+++ b/app/views/partials/technologies.html
@@ -1,6 +1,6 @@
 <!-- TODO to directive -->
 <!--
-        <div class="span4">
+        <div class="col-md-4">
 
             <div class="technologies">
 
